Bug 343895 - KDevelop "Format files" option should ask for confirmation.
Summary: KDevelop "Format files" option should ask for confirmation.
Status: RESOLVED FIXED
Alias: None
Product: kdevelop
Classification: Applications
Component: general (other bugs)
Version First Reported In: 4.7.0
Platform: unspecified Linux
: NOR critical
Target Milestone: ---
Assignee: kdevelop-bugs-null
URL:
Keywords:
: 298804 339161 (view as bug list)
Depends on:
Blocks:
 
Reported: 2015-02-07 14:31 UTC by Ambroz Bizjak
Modified: 2017-01-06 09:29 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Ambroz Bizjak 2015-02-07 14:31:49 UTC
The "Format files" option in the project explorer is right next to "Find/replace". It is easy to accidentally trigger it, and then there is no confirmation before an automatic modification of all files in the selected folder takes place (and potential data loss).

Reproducible: Always
Comment 1 Sven Brauch 2015-10-11 14:24:23 UTC
Git commit 3785846b75c0182e0d2397a17c89bdb1409c75ce by Sven Brauch.
Committed on 11/10/2015 at 14:24.
Pushed by brauch into branch 'master'.

Ask before formatting a whole folder of files

M  +8    -1    shell/sourceformattercontroller.cpp

http://commits.kde.org/kdevplatform/3785846b75c0182e0d2397a17c89bdb1409c75ce
Comment 2 Sven Brauch 2015-10-11 14:57:46 UTC
*** Bug 339161 has been marked as a duplicate of this bug. ***
Comment 3 Kevin Funk 2017-01-06 09:29:55 UTC
*** Bug 298804 has been marked as a duplicate of this bug. ***