Ask before formatting a whole folder of files

BUG:343895